# rk2

./: .gitmodules  CMakeLists.txt  CPack.cmake  Testy.cpp
.github/workflows/: main.yml  tests.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  program
